<resources>
    <string name="app_name">WeatherApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_icon">Settings icon</string>
    <string name="initial_setup">Initial Setup</string>
    <string name="location">Location</string>
    <string name="gps">GPS</string>
    <string name="map">Map</string>
    <string name="notifications">Notifications</string>
    <string name="ok">OK</string>
    <string name="maps">Maps</string>
    <string name="textview">TextView</string>
    <string name="favourite">Favourite</string>
    <string name="alarms">Alarms</string>
    <string name="home">Home</string>
    <string name="language">Language</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="temperature">Temperature</string>
    <string name="celsius">Celsius</string>
    <string name="kalvin">Kalvin</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="meter_s">meter/s</string>
    <string name="mile_h">mile/h</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="sea_level">Sea level</string>
    <string name="visibility">Visibility</string>
    <string name="clouds">Clouds</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name = "pressure_unit">pa</string>
    <string name="sea_level_unit">msl</string>
    <string name="favourite_is_empty">Favourite is empty</string>
    <string name="no_alarms_yet">No alarms yet</string>
</resources>