<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.Settings">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/curved_white_background"
        android:elevation="4dp"
        android:text="@string/location"
        android:textAlignment="center"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/rg_location"
        app:layout_constraintStart_toStartOf="@+id/rg_location"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rg_location"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/curved_white_background"
        android:elevation="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

        <RadioButton
            android:id="@+id/rb_maps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/map"
            android:textAlignment="center"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rb_gps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gps"
            android:textAlignment="center"
            android:textSize="20sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/curved_white_background"
        android:elevation="4dp"
        android:text="@string/language"
        android:textAlignment="center"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/rg_language"
        app:layout_constraintStart_toStartOf="@+id/rg_language"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rg_language"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/curved_white_background"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7">

        <RadioButton
            android:id="@+id/rb_arabic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/arabic"
            android:textAlignment="center"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rb_english"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/english"
            android:textAlignment="center"
            android:textSize="20sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/curved_white_background"
        android:elevation="4dp"
        android:text="@string/temperature"
        android:textAlignment="center"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/rg_degree"
        app:layout_constraintStart_toStartOf="@+id/rg_degree"
        app:layout_constraintTop_toBottomOf="@+id/rg_location" />

    <RadioGroup
        android:id="@+id/rg_degree"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/curved_white_background"
        android:elevation="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView8">

        <RadioButton
            android:id="@+id/rb_celsius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/celsius"
            android:textAlignment="center"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rb_Kalvin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kalvin"
            android:textAlignment="center"
            android:textSize="20sp" />
        <RadioButton
            android:id="@+id/rb_fahrenheit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fahrenheit"
            android:textAlignment="center"
            android:textSize="20sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView13"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/curved_white_background"
        android:elevation="4dp"
        android:text="@string/notifications"
        android:textAlignment="center"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/radioGroup2"
        app:layout_constraintStart_toStartOf="@+id/radioGroup2"
        app:layout_constraintTop_toBottomOf="@+id/rg_language" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/curved_white_background"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13">

        <RadioButton
            android:id="@+id/rb_enable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enable"
            android:textAlignment="center"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rb_disable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/disable"
            android:textAlignment="center"
            android:textSize="20sp" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>